Hector 2.2.0
============
* Add a new parameter: VOLCANIC_SCALE.  This parameter adjusts the
  strength of the response to volcanic forcing.  (PR #291)


Hector 2.1.0
============
* Add reset() function to the API.  Calling this function resets a
  hector core to an earlier time, rerunning the spinup if
  appropriate.  (PR #243)


Hector 2.0.0
============
* Incorporated 1-D diffusive ocean heat model as new temperature component (DOECLIM) (PR #206)
* Bugfix: double counting halocarbon radiative forcing (PR #201)
* Bugfix: re-enabled CO2 concentration constraint (PR #163)  
* Various changes to internals to support calling Hector from external code like pyhector
* Component loggers are now optional (PR #218)
* Renamed anthro emissions to ffi emisisons (fossil fuel industrial) (PR #116)


Hector 1.1.2
============

* Add libhector target OS X and Windows project files (it was already
  available in the Linux build).  This library library is used when
  you want to link Hector to an outside program.

Hector 1.1.1
============

* Fix OS X build
* Update sample output files
* Add GPL license

Hector 1.1
===========

* API for linking with external models.

* Backend R scripts faster and cleaner.

* Minor bug fixes and documentation updates.


Hector 1.0
===========

* First release. Corresponds to Hartin et al. (2015), http://www.geosci-model-dev.net/8/939/2015/gmd-8-939-2015.pdf.