@@ -135,6 +135,7 @@ export(Y2000_SO2)
 export(enddate)
 export(fetchvars)
 export(getdate)
+export(getname)
 export(getunits)
 export(isactive)
 export(newcore)
